[package]
name = "mc-tunnel"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.34.3"
egui = "0.34.3"
iroh = "1.0.0"
iroh-base = "1.0.0"
iroh-relay = "1.0.0"
iroh-tickets = "1.0.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
chrono = "0.4"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self-replace = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"